tdf#152738 sw: fix lost SwPosition in spelling dialog

Which resulted broken spell checking.

Regression from commit b484e5d9e0d22b794c2d1c73741191836158a4ad
"use more SwPosition::Assign".

Change-Id: I7be215f629ed73a3009f8358172ee3a7e2e72ffc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146465
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>